--- a/index.html
+++ b/index.html
@@ -1,7 +1,83 @@
 <!DOCTYPE html>
+
 <html>
+<head>
+    <div class="header">
+        <title>Jesse Murdock </title>
+        <link rel='stylesheet' href="CV_Style.css">
+        <h1 class="title">Jesse Murdock</h1>
+        <img class="Jess" src="Jesse.jpg">
+        <div class="contact">
+            <p>eventrenders@gmail.com</p>
+            <p>(270) 227 - 7615</p>
+            <p>Chandler, AZ</p>
+        </div>
+    </div>
+</head>
 <body>
-  <h1>Hello World</h1>
-  <p>My name is Jesse.</p>
+    
+<h2>Summary</h2>
+    <p id="summary">
+        I have helped produce over 1,000 events for Fortune 500 companies, Grammy Award winning artists, 
+        high profile individuals, and several non-disclosable agencies in the private and public sector.
+        Through every step of my workflow, I create content and 3D models to ensure all my client's needs are handled. 
+        After having children, I decided to return to school at ASU to obtain a Master of Architecture degree where I was entrusted to manage the ASUniverse Digital Twin Project.
+        In this XR Project, I led an interdisciplinary team of students in creating 1:1 replicas of Arizona State's Tempe Campus using Unreal Engine, Unity, and NVIDIA Omniverse. 
+    </p>
+<div>
+    <h2>Work History</h2>
+    <ul>2020-2024&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Freelance Event Render Artist</ul>
+        <li>Allegra Entertainment & Events</li>
+        <li>DCE Productions</li>
+        <li>Earth Circus Productions</li> 
+        <li>Elan Artists</li>
+        <li>Hayes Audio USA</li>
+        <li>Illuminate Events SF</li>
+        <li>Production Management One</li>
+    <ul>Fall 2023 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Industrial Design, LLC</ul>
+    <ul>2021-2023 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ASU Learning Futures</ul>
+    <ul>2021-2023 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nimblist</ul>
+    <ul>2015-2020 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Everything Audio Visual</ul>
+    <ul>Spring 2014 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kentucky Legislative Research Commission</ul>
+    <ul>2010-2015 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ponderosa Farms</ul>
+</div>
+
+<div>
+    <h2>Education</h2>
+    <ul>Arizona State University &nbsp;- &nbsp;Master of Architecture</ul>
+    <ul>Murray State University &nbsp;&nbsp;- &nbsp;Bachelor of Science in Economics</ul>
+</div>
+
+<div>
+    <h2>Sample Projects</h2>
+    <ul>Capstone Master's Project  - Santa Fe, New Mexico</ul>
+    <img class="D5_Workspace" src="D5_Workspace.png">
+    <ul>ASUniverse  -  Project Manager with ASU Learning Futures</ul>
+    <ul>SF Mint     -  Creative Director/ 3D Modeler with Allegra Entertainment & Events</ul>
+    <ul>Event Renders</ul>
+    <img class="SF_NLC" src="SF_NLC.png">
+</div>
+
+<h2>
+    Technology Design
+</h2>
+    <p>For nearly a decade, Jesse has been working at the cutting edge of technology. This has evolved from AV and Lighting Design into full scale digital twins of universities, businesses, warehouses, manufacturing processes, products, and entertainment districts of cities.
+    </p>
+    <p>Jesse received a Master of Architecture Degree from Arizona State University where he worked as a Digital Twin specialist for ASU Learning Futures (now called ASU Next Lab). He received a Bachelor of Science in Economics with a minor in Studio Art from Murray State University in 2014. 
+    </p>
+    <p>Additionally, Jesse is an Eagle Scout, member of the Honorable Order of Kentucky Colonels, and voted Most Dependable of his graduating class.
+    </p>
+
+<h2>Bio</h2>
+    <p>As a visual professional, I use images and illustration to show my thinking. Through every step of my workflow, I produce content and 3D models to ensure all of my client's needs are handled. I am used to working with tight deadlines, high profile individuals, and budgets of all sizes. Everyday I utilize the Architectural Imagination to transform spaces into new worlds.
+    </p>
+    <p>During my tenure as Lead Project Manager and General Manager of Everything Audio Visual in San Francisco, California, I produced over 1,000 events and converted more than 50 of the Bay Area's premiere event venues into 3D as part of my initiative for better pre-production, planning and communication. I worked with several fortune 500 companies to produce high quality services for their events; including, Google, Facebook, Amazon, Airbnb, Reddit, GMC, Nike, Global Foundries, Auto Desk, and Netflix. I expanded upon this work during my time as a Production Designer with Nimblist utilizing Unreal Engine as a pre-visualization tool for stadium and arena tours.
+    </p>
+    <p>Prior to my ventures in event design, I worked on Ponderosa Farms to pay my way through Murray State University where I studied Economics and Art. On the farm I learned carpentry, hydraulic systems, diesel mechanics, welding, fabrication, heavy machinery operation, landscaping, irrigation, aquaculture, commercial agriculture, and most importantly how to work until the job is finished. This engineering mindset shaped the way I design systems in events, construction, software, products and both physical and virtual environments.
+    </p>
+    <p>During my senior year of study at MSU, I completed a highly selective internship for the budget review committee at the Kentucky Legislative Research Commission in the State Capitol Building. I worked with state senators and representatives to provide fiscal analysis for their proposed bills and help balance the commonwealth's budget. This led to receiving several leadership awards from the intern class and the appointment to the Honorable Order of Kentucky Colonels from Gov. Steve Beshear.
+    </p>
+    <img class="D5_Workspace" src="EC916.png">
+<h1 id="bold">LETS MAKE SOMETHING COOL TOGETHER!</h1>
 </body>
 </html>
