--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html>
+<div class="content">
 <head>
     <div class="header">
         <title>Jesse Murdock </title>
@@ -15,7 +16,6 @@
     </div>
 </head>
 <body>
-    
 <h2>Summary</h2>
     <p id="summary">
         I have helped produce over 1,000 events for Fortune 500 companies, Grammy Award winning artists, 
@@ -48,14 +48,16 @@
     <ul>Murray State University &nbsp;&nbsp;- &nbsp;Bachelor of Science in Economics</ul>
 </div>
 
-<div>
+<div class='project'>
     <h2>Sample Projects</h2>
     <ul>Capstone Master's Project  - Santa Fe, New Mexico</ul>
-    <img class="D5_Workspace" src="D5_Workspace.png">
+    <img src="D5_Workspace.png">
     <ul>ASUniverse  -  Project Manager with ASU Learning Futures</ul>
     <ul>SF Mint     -  Creative Director/ 3D Modeler with Allegra Entertainment & Events</ul>
     <ul>Event Renders</ul>
-    <img class="SF_NLC" src="SF_NLC.png">
+    <img src="SF_NLC.png">
+    <ul>Zoom In the Metaverse - Creative Lead and Management Intern at ASU Learning Futures</ul>
+    <img id='Zoom' src="ASU_ZoomInThe Metaverse.png">
 </div>
 
 <h2>
@@ -77,7 +79,10 @@
     </p>
     <p>During my senior year of study at MSU, I completed a highly selective internship for the budget review committee at the Kentucky Legislative Research Commission in the State Capitol Building. I worked with state senators and representatives to provide fiscal analysis for their proposed bills and help balance the commonwealth's budget. This led to receiving several leadership awards from the intern class and the appointment to the Honorable Order of Kentucky Colonels from Gov. Steve Beshear.
     </p>
-    <img class="D5_Workspace" src="EC916.png">
+    <div class="samplerenders">
+    <img src="EC916.png">
+    </div>
 <h1 id="bold">LETS MAKE SOMETHING COOL TOGETHER!</h1>
 </body>
+</div>
 </html>
