--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h1 class="title">Jesse Murdock</h1>
         <img class="Jess" src="Jesse.jpg">
         <div class="contact">
+            <p>(They/Them)</p>
             <p>eventrenders@gmail.com</p>
             <p>(270) 227 - 7615</p>
             <p>Chandler, AZ</p>
@@ -54,10 +55,12 @@
     <img src="D5_Workspace.png">
     <ul>ASUniverse  -  Project Manager with ASU Learning Futures</ul>
     <ul>SF Mint     -  Creative Director/ 3D Modeler with Allegra Entertainment & Events</ul>
+   <img src="SF-Mint-Courtyard.png">
     <ul>Event Renders</ul>
     <img src="SF_NLC.png">
     <ul>Zoom In the Metaverse - Creative Lead and Management Intern at ASU Learning Futures</ul>
     <img id='Zoom' src="ASU_ZoomInThe Metaverse.png">
+    <ul>San Diego Convention Center District Digital Twin</ul>
 </div>
 
 <h2>
