--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <ul>ASUniverse  -  Project Manager with ASU Learning Futures</ul>
     <ul>SF Mint     -  Creative Director/ 3D Modeler with Allegra Entertainment & Events</ul>
    <img src="SF-Mint-Courtyard.png">
-    <ul>Event Renders</ul>
+    <ul>Event Renders - SF City Hall Render</ul>
     <img src="SF_NLC.png">
     <ul>Zoom In the Metaverse - Creative Lead and Management Intern at ASU Learning Futures</ul>
     <img id='Zoom' src="ASU_ZoomInThe Metaverse.png">
