General Site Update

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <ul>Capstone Master's Project  - Santa Fe, New Mexico</ul>
     <img src="D5_Workspace.png">
     <ul>ASUniverse  -  Project Manager with ASU Learning Futures</ul>
+    <img src="ASUniverse.png">
     <ul>SF Mint     -  Creative Director/ 3D Modeler with Allegra Entertainment & Events</ul>
    <img src="SF-Mint-Courtyard.png">
     <ul>Event Renders - SF City Hall Render</ul>
