--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <div>
     <h2>Education</h2>
     <ul>Arizona State University &nbsp;- &nbsp;Master of Architecture</ul>
-    <ul>Murray State University &nbsp;&nbsp;- &nbsp;Bachelor of Science in Economics</ul>
+    <ul>Murray State University &nbsp;&nbsp;- &nbsp;Bachelor of Science in Economics, minor in Art</ul>
 </div>
 
 <div class='project'>
