--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
             <p>(270) 227 - 7615</p>
             <p>Chandler, AZ</p>
         </div>
+        <button>Summary</button>
+        <button>Work History</button>
+        <button>Education</button>
+        <button>Sample Projects</button>
+        <button>Tech Design</button>
+        <button>Bio</button>
     </div>
 </head>
 <body>
