add Stanford gig

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
     <img src="SF_NLC.png">
     <ul>Zoom In the Metaverse - Creative Lead and Management Intern at ASU Learning Futures</ul>
     <img id='Zoom' src="ASU_ZoomInThe Metaverse.png">
-    <ul>San Diego Convention Center District Digital Twin</ul>
+    <ul>Stanford University Digital Twin</ul>
+    <img id="StanfordQuad" src="StanfordQuad_Digital_JesseMurdock.png">
 </div>
 
 <h2>
