Added return to top text

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
     <img src="EC916.png">
     </div>
 <h1 id="bold">LETS MAKE SOMETHING COOL TOGETHER!</h1>
+<a href="#" class="top">Return to Top of Page</a>
 </body>
 </div>
 </html>
